[gd_scene load_steps=9 format=3 uid="uid://3xbvf40uen31"]

[ext_resource type="Script" path="res://enemies/poulet/poulet.gd" id="1_3h5vx"]
[ext_resource type="Texture2D" uid="uid://b7lrnjyn20rxc" path="res://enemies/poulet/Idle (32x34).png" id="2_hkpub"]
[ext_resource type="Texture2D" uid="uid://mgt6d4dhl3s0" path="res://enemies/poulet/Run (32x34).png" id="3_djysc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mhqwq"]
radius = 6.0

[sub_resource type="Animation" id="Animation_u0tlk"]
resource_name = "idle"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChickenIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_olkrc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChickenIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ChickenRun:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2u01l"]
resource_name = "run"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChickenRun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8tr0j"]
_data = {
"RESET": SubResource("Animation_olkrc"),
"idle": SubResource("Animation_u0tlk"),
"run": SubResource("Animation_2u01l")
}

[node name="Poulet" type="CharacterBody2D"]
script = ExtResource("1_3h5vx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 14)
shape = SubResource("CircleShape2D_mhqwq")

[node name="ChickenIdle" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_hkpub")
hframes = 13

[node name="ChickenRun" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_djysc")
hframes = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8tr0j")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
